[gd_scene load_steps=3 format=3 uid="uid://3aes01n6at6s"]

[ext_resource type="Script" uid="uid://cqheb84luk7a7" path="res://components/board_piece.gd" id="1_5e14y"]
[ext_resource type="SpriteFrames" uid="uid://8x6mfl4g5ljp" path="res://assets/sprite_frames/red_piece.tres" id="1_nq4bp"]

[node name="BoardPiece" type="Node2D" node_paths=PackedStringArray("PieceVisual")]
script = ExtResource("1_5e14y")
PieceVisual = NodePath("PieceVisual")

[node name="PieceVisual" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_nq4bp")
offset = Vector2(0, -1)

[connection signal="animation_finished" from="PieceVisual" to="." method="_on_piece_visual_animation_finished"]
